fix(swggaer): 修复 swagger 路径问题
